[package]
name = "msn-kit"
version = "0.1.8"
edition = "2018"
license = "MIT"
description = "Library and CLI for working with Mass Spec data."
homepage = "http://www.github.com/tshauck/msn-kit"
documentation = "http://www.github.com/tshauck/msn-kit"
repository = "http://www.github.com/tshauck/msn-kit"
readme = "README.md"

[lib]
test = true

[[bin]]
name = "mm"
path = "./src/main.rs"

[dependencies]
clap = "3.0.0-beta.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
