[package]
name = "msn-kit-cli"
version = "0.2.1"
edition = "2018"

[[bin]]
name = "mm"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msn-kit = { path = "../msn-kit" }
clap = "3.0.0-beta.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
