[package]
name = "msn-kit"
version = "0.2.3"
edition = "2018"
license = "MIT"
description = "Library and CLI for working with Mass Spec data."
homepage = "http://www.github.com/tshauck/msn-kit"
documentation = "https://docs.rs/msn-kit/0.1.0/msn_kit/"
repository = "http://www.github.com/tshauck/msn-kit"
readme = "../README.md"

[lib]
test = true

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
