[package]
name = "msn-kit"
version = "0.2.5"
edition = "2021"
license = "MIT"
description = "Library and CLI for working with Mass Spec data."
homepage = "http://www.github.com/tshauck/msn-kit"
documentation = "https://docs.rs/msn-kit/0.1.0/msn_kit/"
repository = "http://www.github.com/tshauck/msn-kit"
readme = "../README.md"

[lib]
test = true

[dependencies]
base64 = { version = "0.13.0" }
byteorder = "1"
flate2 = "1.0"
quick-xml = { version = "0.22", features = [ "serialize" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structure = "0.1"
